# spacetraders

./: .gitignore  Cargo.toml  spacetraders.json
.github/: dependabot.yml
macros/src/: lib.rs
sdk/: Cargo.toml  README.md
sdk/src/apis/: agents_api.rs  contracts_api.rs  default_api.rs  factions_api.rs  fleet_api.rs  systems_api.rs
src/: cli.rs  config.rs  main.rs
