[package]
name = "spacetraders"
version = "0.1.0"
edition = "2021"
authors = ["ben"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

repl-rs = "0.2.7"
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = {version="1.0.162", features=["derive"]}
serde_json = "1.0.96"
inquire = "0.6.2"
spacetraders-sdk = {path= "./sdk"}
chrono = "0.4.24"
comfy-table = "7.0.0"
clap = { version="4.2.7", features=["derive"] }
macros = {path = "./macros"}